Clean up and remove styles and classes.

--- a/website/app/application/directives/partials/detail-tabs.html
+++ b/website/app/application/directives/partials/detail-tabs.html
@@ -1,4 +1,4 @@
-<div ng-if="ctrl.tabs.length" class="content-tab">
+<div ng-if="ctrl.tabs.length">
     <ul class="nav nav-tabs">
         <li ng-repeat="tab in ctrl.tabs"
             ng-class="{active: ctrl.isActive(tab.name)}">
