--- a/website/app/application/directives/partials/setup-details.html
+++ b/website/app/application/directives/partials/setup-details.html
@@ -1,4 +1,4 @@
-<div classx="tab-pane active">
+<div>
     <table class="table">
         <thead>
         <tr>
@@ -8,8 +8,8 @@
         </thead>
         <tbody>
         <tr ng-repeat="property in setup.properties">
-            <td style="height: 0px;"> {{property.name}}</td>
-            <td style="height: 0px;">{{property.value}} {{property.unit}}</td>
+            <td> {{property.name}}</td>
+            <td>{{property.value}} {{property.unit}}</td>
         </tr>
         </tbody>
     </table>
