Rework display of templates. Try and set the body size for the templates.

--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -1150,3 +1150,12 @@ hr.heading-label {
     padding-left: 10px;
 }
 
+.modal-dialog, .modal-content {
+    height: 80%;
+}
+
+.modal-body {
+    max-height: 80%;
+    overflow-y: scroll;
+}
+
