--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -1150,12 +1150,8 @@ hr.heading-label {
     padding-left: 10px;
 }
 
-.modal-dialog, .modal-content {
-    height: 80%;
-}
-
 .modal-body {
-    max-height: 80%;
+    max-height: 500px;
     overflow-y: scroll;
 }
 
