File selection skeleton.

--- a/website/app/application/services/partials/select-items.html
+++ b/website/app/application/services/partials/select-items.html
@@ -23,7 +23,7 @@
                     <select-items-processes processes="ctrl.processes"></select-items-processes>
                 </div>
                 <div ng-if="ctrl.isActive('files')">
-                    files
+                    <select-items-files files="ctrl.files"></select-items-files>
                 </div>
                 <div ng-if="ctrl.isActive('reviews')">
                     reviews
