--- a/website/app/application/core/projects/project/project.css
+++ b/website/app/application/core/projects/project/project.css
@@ -35,6 +35,6 @@
 /* project layout */
 .project-content {
     padding-top: 75px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 0;
+    margin-right: 0;
 }
