Change from samples-obj to samples.

--- a/website/app/application/directives/partials/samples-list.html
+++ b/website/app/application/directives/partials/samples-list.html
@@ -18,7 +18,7 @@
                     </p>
 
                     <p class="text-small">{{sample.description}}</p>
-                    <display-image-tab sample-obj="sample"></display-image-tab>
+                    <display-image-tab sample="sample"></display-image-tab>
                 </div>
             </td>
             <td style="width:30%">
