Fix up samples route by adding a list, list.edit and edit routes. Make samples an abstract route. Disable displaying measurements until we support better methods for entering measurement data.

--- a/website/app/application/directives/partials/detail-tabs.html
+++ b/website/app/application/directives/partials/detail-tabs.html
@@ -15,6 +15,7 @@
         <file-notes ng-if="ctrl.isActive('notes')" file="ctrl.item"></file-notes>
         <files-list ng-if="ctrl.isActive('files')" files="ctrl.item.files"></files-list>
         <reviews-list ng-if="ctrl.isActive('reviews')" reviews="ctrl.item.reviews"></reviews-list>
+        <!-- For the moment measurements are not supported in the controller while we rethink them -->
         <measurements-list ng-if="ctrl.isActive('measurements') && ctrl.item"
                            sample="ctrl.item">
         </measurements-list>
