Move code around that implements mcmodal so that the templates are near the service and not scattered in unrelated directories.

--- a/website/app/application/services/mcmodal/partials/prefill.html
+++ b/website/app/application/services/mcmodal/partials/prefill.html
@@ -85,7 +85,7 @@
                         <i ng-if="setting.property.required" class="fa fa-fw fa-asterisk text-danger"></i> </label>
 
                         <div class="col-xs-6">
-                            <input type="text" name="stringInput" class="form-control"
+                            <input type="text" class="form-control"
                                    name="stringInput" ng-required="setting.property.required"
                                    ng-model="setting.property.value">
 
