--- a/website/app/application/services/mcmodal/partials/template.html
+++ b/website/app/application/services/mcmodal/partials/template.html
@@ -52,15 +52,19 @@
                                     <a ng-click="ctrl.toggleFavorite(template)">
                                         <i class="fa fa-fw fa-star pull-right"
                                            ng-class="{'fa-star' : template.favorite, 'fa-star-o': !template.favorite}">
-
                                         </i>
                                     </a>
                                     <div class="row">
                                         <button class="btn btn-info" ng-click="ctrl.viewSetup(template)">
                                             <i class="fa fa-fw fa-gear"></i>Setup
                                         </button>
-                                        <button class="btn btn-info" ng-click="ctrl.openPrefill(template)">
-                                            <i class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
+                                        <button ng-if="template.prefill" class="btn btn-info"
+                                                ng-click="ctrl.editPrefill(template)">
+                                            <i class="fa fa-fw fa-pencil-square-o"></i>Edit
+                                        </button>
+                                        <button ng-if="!template.prefill" class="btn btn-info"
+                                                ng-click="ctrl.addPrefill(template)">
+                                            <i class="fa fa-fw fa-plus"></i>pre-fill
                                         </button>
                                     </div>
                                 </div>
@@ -96,8 +100,13 @@
                                         <button class="btn btn-info" ng-click="ctrl.viewSetup(template)">
                                             <i class="fa fa-fw fa-gear"></i>Setup
                                         </button>
-                                        <button class="btn btn-info" ng-click="ctrl.openPrefill(template)">
-                                            <i class="fa fa-fw fa-pencil-square-o"></i>Pre-fill
+                                        <button ng-if="template.prefill" class="btn btn-info"
+                                                ng-click="ctrl.editPrefill(template)">
+                                            <i class="fa fa-fw fa-pencil-square-o"></i>Edit
+                                        </button>
+                                        <button ng-if="!template.prefill" class="btn btn-info"
+                                                ng-click="ctrl.addPrefill(template)">
+                                            <i class="fa fa-fw fa-plus"></i>pre-fill
                                         </button>
                                     </div>
                                 </div>
@@ -129,11 +138,10 @@
                                     <a ng-click="ctrl.toggleFavorite(template)">
                                         <i class="fa fa-fw fa-star pull-right"
                                            ng-class="{'fa-star' : template.favorite, 'fa-star-o': !template.favorite}">
-
                                         </i>
                                     </a>
                                     <div class="row">
-                                        <button class="btn btn-info" ng-click="ctrl.viewPrefilledSetup(template)">
+                                        <button class="btn btn-info" ng-click="ctrl.viewSetup(template)">
                                             <i class="fa fa-fw fa-gear"></i>Setup
                                         </button>
                                     </div>
