--- a/website/app/application/directives/partials/files-list.html
+++ b/website/app/application/directives/partials/files-list.html
@@ -12,7 +12,7 @@
         <tbody>
         <tr ng-repeat="file in files">
             <td>
-                <b><a ui-sref="projects.project.files.all.edit({file_id: file.id,
+                <b><a ui-sref="projects.project.files.edit({file_id: file.id,
                     file_type: file.type})">{{file.name}}</a></b>
 
                 <div style="padding-bottom: 15px;">
