--- a/website/app/application/core/projects/project/project.css
+++ b/website/app/application/core/projects/project/project.css
@@ -1,40 +1,56 @@
 .project-bar {
-    border-bottom: transparent;
+  border-bottom: transparent;
 }
 
 .project-bar.nav.nav-tabs > li > a {
-    color: #ffffff;
-    font-size: 16px;
-    border-radius: 0 0 0 0;
+  color: #ECF0F1;
+  font-size: 1rem;
+  border-radius: 0 0 0 0;
 }
 
 .project-bar.nav-tabs > li.active > a {
-    background-color: #f5f5f5;
-    color: #7990a3;
-    border-bottom: 1px solid #f5f5f5;
+  background-color: #ECF0F1;
+  color: #3498DB;
+  border-bottom: 1px solid #f5f5f5;
+  font-weight: bold;
 }
 
 .project-bar.nav-tabs > li.active > a:hover {
-    opacity: 1;
-    border-bottom: 1px solid #f5f5f5;
+  color: #2980B9;
 }
 
 .project-bar.nav-tabs > li > a:hover {
-    opacity: 1;
-    border-bottom: 1px solid #f5f5f5;
+  color: #2980B9;
 }
 
 .project-nav-bar {
-    background-color: #518394;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    right: 0;
+  /*background-color: #3498DB;*/
+  background-color: rgba(52, 152, 219, 1);
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  right: 0;
+}
+
+ul.project-bar.nav li.projects-drop-down a:hover
+{
+  /*background-color: #45707D;*/
+  color: #2980B9;
+  border: 0;
+  border-top: 1px solid #518394;
+}
+
+ul.project-bar.nav .open > a {
+  background-color: #ECF0F1;
+  color: #3498DB;
+  font-weight: bold;
 }
 
 /* project layout */
 .project-content {
-    padding-top: 75px;
-    margin-left: 0;
-    margin-right: 0;
+  padding:  40px 0px 0 00px;
+  /*padding-top: 30px;*/
+  margin-left: 0;
+  margin-right: 0;
 }
+
