--- a/website/app/assets/css/style-3.css
+++ b/website/app/assets/css/style-3.css
@@ -22,11 +22,11 @@ html {
 body {
   font-family: roboto, serif;
   font-style: normal;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
   overflow-x: hidden;
   color: #424242;
   background-color: #FFFFFF;
-  height: 100%;
+  /*height: 100%;*/
   margin-top: 41px;
 }
 
@@ -36,20 +36,28 @@ textarea {
 
 /*** Override basic bootstrap styles ***/
 
-.btn {
-  text-transform: uppercase;
-  border-radius: 2px;
-  font-weight: 500;
+/*.btn {*/
+  /*text-transform: uppercase;*/
+  /*border-radius: 2px;*/
+  /*font-weight: 500;*/
+/*}*/
+
+/*.btn-default {*/
+  /*color: white;*/
+/*}*/
+
+.btn{
+  font-weight: bold;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
-.btn-default {
-  color: white;
-}
-
-.btn-danger {
-  background-color: #E57373;
-  border-color: #E57373;
-}
+/*.btn-danger {*/
+  /*background-color: #E57373;*/
+  /*border-color: #E57373;*/
+/*}*/
 
 .btn-danger:hover,
 .btn-danger:focus,
@@ -75,11 +83,11 @@ a:hover, a:visited {
 }
 
 /*h1, h2 {*/
-  /*color: #515151;*/
+/*color: #515151;*/
 /*}*/
 
 /*h3, h4, h5, h6 {*/
-  /*color: #5e5e5e;*/
+/*color: #5e5e5e;*/
 /*}*/
 
 .text-emphasis {
@@ -110,73 +118,69 @@ a:hover, a:visited {
 
 /* Display contents in cards */
 
-.card {
-  background-color: #ffffff;
-  border-radius: 3px;
+.main {
+  /*background-color: #ffffff;*/
 }
 
-.card-header {
-  padding-top: 15px;
-  padding-bottom: 30px;
-}
-
-/*.card-dark {*/
-  /*background-color: #f6f6f6;*/
-/*}*/
-
-.card-left {
-  margin: -20px;
-}
-
-.card-right {
-  border-radius: 0 3px 3px 0;
-}
-
-.card-side-bar {
+.sidebar {
   border-left: none;
   padding-left: 0;
   padding-right: 0;
+  padding-top:10px;
+  border-right: 0.4px solid lightgrey;
+  max-height: 600px;
+  overflow-y: auto;
 }
 
-/*.card-side-bar.padding {*/
-  /*padding-left: 20px;*/
-  /*padding-right: 20px;*/
-/*}*/
-
-.card-side-bar .list-group-item {
-  height: 100px;
+.sidebar .list-group-item {
+  height: auto;
   border-radius: 0;
-  border-left:none;
-  /*border-right: 1px solid #c3c3c3;*/
-  padding-left: 30px;
-  margin-right: 7px;
+  border-left: none;
+  padding: 10px 20px 10px 30px;
 }
 
-/*.card-side-bar .list-group-item:nth-of-type(odd) {*/
-  /*background: #ffffff !important;*/
-/*}*/
-
-/*.card-side-bar .list-group-item:nth-of-type(even) {*/
-  /*background: #efefef !important;*/
-/*}*/
-
-/*.card-side-bar .list-group-item:first-child {*/
-  /*border-top-left-radius: 0;*/
-  /*border-top-right-radius: 0;*/
-/*}*/
-
-/*.card-side-bar .list-group-item:last-child {*/
-  /*border-bottom-left-radius: 0;*/
-  /*border-bottom-right-radius: 0;*/
-/*}*/
-
-.card-side-bar .list-group-item.active {
+.sidebar .list-group-item.active {
   color: #212121;
   background-color: #EEF3F5;
+  border: none;
 }
 
-.card-side-bar .space-right {
-  padding-right: 10px;
+.sidebar .list-group-item.active .heading {
+    font-weight: bold;
+}
+
+.sidebar .list-group-item .heading {
+  font-size: 1rem;
+  color: #424242;
+}
+
+.sidebar .text-muted{
+  font-size: 0.9rem;
+  color: #9e9e9e;
+}
+
+.sidebar .counts{
+  font-size: 0.9rem;
+}
+
+.padding-left-15{
+  padding-left: 15px;
+}
+
+.text-light{
+  font-size: 1rem;
+  color: #9e9e9e;
+}
+
+.detail-content .description-content{
+  font-size: 1rem;
+  color: #424242;
+}
+
+.detail-content{
+  padding: 30px 20px 10px 40px;
+  max-height:600px;
+  overflow-y:auto;
 }
 
 .truncate-text {
@@ -377,9 +381,6 @@ a:hover, a:visited {
   margin-bottom: 5px;
 }
 
-.btn, .btn-default {
-  padding: 4px 15px;
-}
 
 .fa-asterisk {
   color: red;
@@ -840,22 +841,6 @@ header {
   color: red;
 }
 
-.details-sidebar {
-  /*min-height: 550px;*/
-  /*max-height: 600px; /!*This should be true across all the detail pages*!/*/
-  overflow-y: auto;
-  transition: all 0.5s ease 0s;
-  z-index: 1000;
-  background-color: #f6f6f6;
-  /*border: 1px solid #e7e7e7;*/
-  border: 1px solid #c3c3c3;
-  border-right: 1px solid #c3c3c3;
-  padding-left: 20px;
-  padding-top: 20px;
-  padding-right: 20px;
-  min-height: 100%;
-}
-
 .no-padding {
   padding: 0;
 }
@@ -864,53 +849,26 @@ header {
   padding-left: 0;
 }
 
-.details-sidebar .list-group {
-  margin-right: 15px;
-  margin-left: 15px;
+.no-position {
+  position: static;
 }
 
-.details-sidebar .list-group .list-group-item {
-  height: 60px;
-  border-bottom: medium dotted #d3d3d3;
-  border-top: 0;
-  padding-top: 20px;
-  border-right: 0;
-  border-left: 0;
-  border-radius: 0;
-  font-size: 16px;
-}
 
-.details-sidebar .list-group .list-group-item.active {
-  color: #FDB600;
-  background-color: #fff;
-  font-weight: bold;
-}
+/*.details-main-content {*/
+  /*min-height: 100%;*/
+  /*overflow-y: auto;*/
+  /*transition: all 0.5s ease 0s;*/
+  /*z-index: 1000;*/
+  /*background-color: white;*/
+  /*border: 1px solid #e7e7e7;*/
+  /*padding-top: 10px;*/
+  /*padding-left: 15px;*/
+  /*padding-right: 15px;*/
+/*}*/
 
-.details-sidebar .list-group .list-group-item > span {
-  color: #cacaca;
-  padding-left: 8px;
-}
-
-.details-sidebar .list-group .list-group-item.active > span {
-  color: #FDB600;
-  font-weight: normal;
-}
-
-.details-main-content {
-  min-height: 100%;
-  overflow-y: auto;
-  transition: all 0.5s ease 0s;
-  z-index: 1000;
-  background-color: white;
-  border: 1px solid #e7e7e7;
-  padding-top: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.details-main-content h3 {
-  margin-top: 8px;
-}
+/*.details-main-content h3 {*/
+  /*margin-top: 8px;*/
+/*}*/
 
 .review, .review-color {
   color: #FDB600;
@@ -1011,15 +969,15 @@ hr.heading-label {
   color: #F4626C;
 }
 
-.btn-details-container {
-  color: #ffffff;
-  border: none;
-  border-radius: 0;
-  font-weight: 500;
-  padding-left: 30px;
-  padding-right: 30px;
-  text-transform: uppercase;
-}
+/*.btn-details-container {*/
+  /*color: #ffffff;*/
+  /*border: none;*/
+  /*border-radius: 0;*/
+  /*font-weight: 500;*/
+  /*padding-left: 30px;*/
+  /*padding-right: 30px;*/
+  /*text-transform: uppercase;*/
+/*}*/
 
 .btn-cancel {
   background-color: #E57373;
@@ -1119,7 +1077,6 @@ hr.heading-label {
   height: 100%;
 }
 
-
 .display-inline {
   display: inline-block;
 }
@@ -1171,16 +1128,6 @@ li.dashboard-item {
 li.dashboard-item div p {
   color: #a9a9a9;
   padding-top: 8px;
-}
-
-.list-group-item.active, .list-group-item:focus, .list-group-item.active:hover {
-  background-color: #EEE;
-  color: black;
-  border: none;
-}
-
-.list-group-item-heading {
-  font-size: 1.2rem; /*1.2 times the root font size*/
 }
 
 .fa-star {
