Don't add the unit to the list of units if a unit is chosen and there is a list of choices for the unit.

--- a/website/app/application/services/mcmodal/partials/view_setup.html
+++ b/website/app/application/services/mcmodal/partials/view_setup.html
@@ -31,7 +31,7 @@
                         <div ng-if="item.property.units.length !== 0"
                              ng-repeat="unit in item.property.units">{{unit}}
                         </div>
-                        <div ng-if="item.property.unit">{{item.property.unit}}</div>
+                        <div ng-if="item.property.unit && item.property.units.length === 0">{{item.property.unit}}</div>
                     </td>
                     <td>
                         <div ng-if="item.property.value">
