Handle selection values since the database is slightly inconsistent at the moment. Some values are objects and some are strings. They should all be changed to objects (hasn't happened yet).

--- a/website/app/application/directives/partials/processes-list.html
+++ b/website/app/application/directives/partials/processes-list.html
@@ -17,7 +17,7 @@
                             {{process.birthtime | toDateString}}
                             <span style="padding-left: 10px">{{process.owner}}</span>
                         </p>
-                        <p>Transformation: {{process.does_transform}}</p>
+                        <p>Transforms: {{process.does_transform}}</p>
                     </div>
                 </td>
                 <td style="width:30%">
