Change description to remove what/why.

--- a/website/app/application/directives/partials/processes-list.html
+++ b/website/app/application/directives/partials/processes-list.html
@@ -27,8 +27,7 @@
                 </td>
                 <td style="width:30%">
                     <div style="max-height: 200px;overflow-y: auto;">
-                        What : {{process.what}} <br>
-                        Why: {{process.why}}
+                        {{process.what}}
                     </div>
                 </td>
             </tr>
