Display NO XXXX if there are no items for that tab.

--- a/website/app/application/directives/partials/files-list.html
+++ b/website/app/application/directives/partials/files-list.html
@@ -1,6 +1,6 @@
 <div class="tab-pane">
     <div ng-if="files.length === 0">
-        No files
+        <h1 class="text-uppercase">No files</h1>
     </div>
     <table ng-if="files.length !== 0" class="table">
         <thead>
