--- a/website/app/application/directives/partials/setup-details.html
+++ b/website/app/application/directives/partials/setup-details.html
@@ -1,23 +1,28 @@
 <div>
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Value</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="property in setup.properties">
-            <td style="height: 0;">
-                {{property.name}}
-            </td>
-            <td ng-if="property.value.name" style="height: 0">
-                {{property.value.name}} {{property.unit}}
-            </td>
-            <td ng-if="!property.value.name" style="height: 0;">
-                {{property.value}} {{property.unit}}
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div ng-if="!setup.properties.length">
+        <h1 class="text-uppercase">No Setup</h1>
+    </div>
+    <div ng-if="setup.properties.length">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Value</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="property in setup.properties">
+                <td style="height: 0;">
+                    {{property.name}}
+                </td>
+                <td ng-if="property.value.name" style="height: 0">
+                    {{property.value.name}} {{property.unit}}
+                </td>
+                <td ng-if="!property.value.name" style="height: 0;">
+                    {{property.value}} {{property.unit}}
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
