--- a/website/app/application/directives/partials/samples-list.html
+++ b/website/app/application/directives/partials/samples-list.html
@@ -1,5 +1,5 @@
 <div>
-    <div ngif="!samples.length">
+    <div ng-if="!samples.length">
         <h1 class="text-uppercase">No Samples</h1>
     </div>
     <div ng-if="samples.length">
