--- a/website/app/application/directives/partials/samples-list.html
+++ b/website/app/application/directives/partials/samples-list.html
@@ -7,7 +7,7 @@
             <thead>
             <tr>
                 <th>Details</th>
-                <th>Properties</th>
+                <!--<th>Properties</th>-->
             </tr>
             </thead>
             <tbody>
@@ -25,17 +25,17 @@
                         <display-image-tab sample="sample"></display-image-tab>
                     </div>
                 </td>
-                <td style="width:30%">
-                    <div class="overflow">
-                        <ul style="list-style-type: circle;">
-                            <li ng-repeat="property in sample.properties">
-                                {{property.name}} :
-                                <display-measurement project="project"
-                                                     measure="property.best_measure[0]"></display-measurement>
-                            </li>
-                        </ul>
-                    </div>
-                </td>
+                <!--<td style="width:30%">-->
+                <!--<div class="overflow">-->
+                <!--<ul style="list-style-type: circle;">-->
+                <!--<li ng-repeat="property in sample.properties">-->
+                <!--{{property.name}} :-->
+                <!--<display-measurement project="project"-->
+                <!--measure="property.best_measure[0]"></display-measurement>-->
+                <!--</li>-->
+                <!--</ul>-->
+                <!--</div>-->
+                <!--</td>-->
             </tr>
             </tbody>
         </table>
