Change size of NO ***** message. Explicitly check for length 0 to display NO ***** message.

--- a/website/app/application/directives/partials/processes-list.html
+++ b/website/app/application/directives/partials/processes-list.html
@@ -1,6 +1,6 @@
 <div>
-    <div ng-if="!processes.length">
-        <h1 class="text-uppercase">no processes</h1>
+    <div ng-if="processes.length === 0">
+        <h3 class="text-uppercase">no processes</h3>
     </div>
     <div ng-if="processes.length">
         <div class="tab-pane row">
