--- a/website/app/application/directives/partials/samples-list.html
+++ b/website/app/application/directives/partials/samples-list.html
@@ -1,6 +1,6 @@
 <div>
-    <div ng-if="!samples.length">
-        <h1 class="text-uppercase">No Samples</h1>
+    <div ng-if="samples.length === 0">
+        <h3 class="text-uppercase">No Samples</h3>
     </div>
     <div ng-if="samples.length">
         <table class="table">
