--- a/website/app/application/directives/partials/files-list.html
+++ b/website/app/application/directives/partials/files-list.html
@@ -12,10 +12,8 @@
         <tbody>
         <tr ng-repeat="file in files">
             <td>
-                <b>
-                    <a ui-sref="projects.project.files.edit({file_id: file.id, file_type: file.type})">
-                        {{file.name}}
-                    </a>
+                <b><a ui-sref="projects.project.files.edit({file_id: file.id, file_type: file.type})">
+                    {{file.name}}</a>
                 </b>
 
                 <div style="padding-bottom: 15px;">
@@ -26,8 +24,10 @@
                     </p>
                 </div>
             </td>
-            <td class="col-xs-6">
-                <display-file-contents file="file"></display-file-contents>
+            <td>
+                <div class="snippet">
+                    <display-file-contents file="file"></display-file-contents>
+                </div>
             </td>
         </tr>
         </tbody>
