Prototype adding composition when creating a sample.

--- a/website/app/assets/css/periodic-table.css
+++ b/website/app/assets/css/periodic-table.css
@@ -1,7 +1,7 @@
 
 section {
     max-width: 600px;
-    margin: 0px auto;
+    /*margin: 0px auto;*/
     overflow: hidden;
     min-width: 300px;
 }
