--- a/website/app/application/services/partials/select-items.html
+++ b/website/app/application/services/partials/select-items.html
@@ -1,6 +1,6 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">Link</h3>
+        <h3 class="modal-title">Select Items</h3>
     </div>
     <div class="modal-body">
         <div class="row">
